several features added and code refactor